fixed video player on small.css being wrong size

--- a/site/styles/small.css
+++ b/site/styles/small.css
@@ -360,7 +360,7 @@ iframe {
 	top:10px;
 	left:10px;
 	width:580px;
-	height:344px;
+	height:326px;
 }
 .copy a {
 	font-weight:400;
